--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
             <div style=" width: 85%;margin:0 auto;">
                 <div class="brand-heading">
 
-                    <p style=" color:#33FFFF; font-size: 17px;"> <span class="txt-rotate" data-period="100"
+                    <p style=" color:#7DF9FF; font-size: 17px;"> <span class="txt-rotate" data-period="100"
                             data-rotate='[ "Namaste,",  "Hey,", "Hello," ]'></span> my name is</p>
                 </div>
-
+               
                 <div>
                     <h1 class="Line1"> Shikhar Chauhan. </h1>
                     <h1 class="Line2">I build things for the web. </h1>
@@ -125,8 +125,8 @@
                     <h3 class="aboutFront"> <span class="introD">I am a Software Engineer specializing in Frontend
                             Technologies, passionate about building scalable,
                             high-performance web applications. I thrive on solving
-                            <span style="color:  #33FFFF;">complex problems, optimizing user
-                                experiences,</span> and <br><span style="color:  #33FFFF;"> creating intuitive, visually
+                            <span style="color:  #7DF9FF;">complex problems, optimizing user
+                                experiences,</span> and <br><span style="color:  #7DF9FF;"> creating intuitive, visually
                                 appealing interfaces. </span> With a strong focus on detail
                             and efficiency, I enjoy collaborating with teams to deliver seamless and impactful digital
                             solutions.</span>
@@ -144,31 +144,31 @@
         <div style="margin-bottom: 200px" class="container ">
             <div style=" width: 85%;margin:0 auto;">
                 <h2 style="font-size: 30px; font-weight: bold;" id="Aboutt"> <span
-                        style="font-size: 30px; color: #33FFFF;">01. </span> About Me</h2>
+                        style="font-size: 30px; color: #7DF9FF;">01. </span> About Me</h2>
                 <p class="aboutFront" style=" color: rgba(240, 248, 255, 0.623); font-size: 18px; font-weight: 300;">
                     Passionate Frontend Engineer with 3+ years of
                     experience in building high-performance, scalable, and user-friendly web applications.
                     Currently
                     at Tiket.com, where I’ve played a key role in revamping
                     travel
-                    booking experiences, <span style="color:  #33FFFF;">optimizing
+                    booking experiences, <span style="color:  #7DF9FF;">optimizing
                         UI for 29% faster load times</span>, and implementing A/B testing & <span
-                        style="color:  #33FFFF;">conversion-driven design to
+                        style="color:  #7DF9FF;">conversion-driven design to
                         enhance
                         engagement.</span><br>
-                    I specialize in <span style="color:  #33FFFF;">React.js, Next.js, SSR, CSR, and CDN
+                    I specialize in <span style="color:  #7DF9FF;">React.js, Next.js, SSR, CSR, and CDN
                         optimizations</span>, ensuring fast, responsive,
                     and accessible user experiences across devices. My work has led to a <span
-                        style="color:  #33FFFF;">70%
+                        style="color:  #7DF9FF;">70%
                         reduction in
                         bugs</span> and
                     improved overall platform reliability. Recognized for meeting deadlines, optimizing
                     performance,
                     and driving impactful UI transformations, I thrive in fast-paced environments.<br>
                     I’m always out there to take on new challenges where I can apply my expertise in <span
-                        style="color:  #33FFFF;">UI/UX</span>,
+                        style="color:  #7DF9FF;">UI/UX</span>,
                     performance tuning, and scalable architecture—leveraging my skills to build next-gen web
-                    experiences. If you're looking for someone who loves <span style="color:  #33FFFF;"> seamless,
+                    experiences. If you're looking for someone who loves <span style="color:  #7DF9FF;"> seamless,
                         high-impact frontend
                         solutions</span>, let's connect!</p>
 
@@ -193,7 +193,7 @@
 
             <div style="margin-bottom: 40px;">
                 <div style="width: 85%; margin: 0 auto;">
-                    <h1 id="Workss" class="main-heading">My Recent <span style="color: #33FFFF">Works</span> </h1>
+                    <h1 id="Workss" class="main-heading">My Recent <span style="color: #7DF9FF">Works</span> </h1>
                     <p>Here are a few projects I've worked on recently.</p>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                                 user.
                             </p>
                             <a href="https://github.com/Shikh007ar/CollegeSpace " target="_blank">
-                                <Button class="btn " style="background-color: #33FFFF; height: 35px; "
+                                <Button class="btn " style="background-color: #7DF9FF; height: 35px; "
                                     variant="primary " "><i class=" cil-external-link ">&nbsp;</i>View Project</Button>
                             </a>
                         </div>
@@ -236,7 +236,7 @@
                                     <a style="bottom: 5px;" href="https://react-my-burger-f4895.web.app/"
                                         target="_blank">
                                         <Button class="btn "
-                                            style="background-color: #33FFFF; height: 35px; bottom: -60px; "
+                                            style="background-color: #7DF9FF; height: 35px; bottom: -60px; "
                                             variant="primary "><i class="cil-external-link ">&nbsp;</i>View
                                             Project</Button>
                                     </a>
@@ -251,7 +251,7 @@
 
                     <div style="width: 85%; margin: 0 auto;">
                         <h1 class=" main-heading ">
-                            Professional <span style="color: #33FFFF ">Skillset</span>
+                            Professional <span style="color: #7DF9FF ">Skillset</span>
                         </h1>
                     </div>
 
@@ -412,7 +412,7 @@
                                     Through this platform I learnt various new languages like
                                     html,css,javascript,nodejs,express,ejs by working on different technologies like
                                     mongodb,Visual studio,Atom and roto3T </ul>
-                                <ul style="color:#33FFFF ; ">Certificate:-
+                                <ul style="color:#7DF9FF ; ">Certificate:-
                                     <a style="color: #fff; "
                                         href="https://www.udemy.com/certificate/UC-39c123d4-637c-4637-8ad4-f411cee9d3cc/ ">Web
                                         Development</a>
@@ -428,7 +428,7 @@
                                 <ul>
                                     React is a platform and framework for building single-page client applications using
                                     HTML and TypeScript. </ul>
-                                <ul style="color:#33FFFF ; ">Certificate:-
+                                <ul style="color:#7DF9FF ; ">Certificate:-
                                     <a style="color: #fff; "
                                         href="https://www.udemy.com/certificate/UC-aac85b8c-e3b7-4417-a8b2-de1cec3d4e9a/ ">Angular
                                         Certificate</a>
@@ -441,7 +441,7 @@
                             </h5>
                             <ul>
                                 I love to improve my coding skills and this is the platform that i use for that </ul>
-                            <ul style="color:#33FFFF ; ">CodeChef Profile:-
+                            <ul style="color:#7DF9FF ; ">CodeChef Profile:-
                                 <a style="color: #fff; " target="_blank" href="https://www.codechef.com/users/shikharsingh_7 ">Shikhar's Profile</a>
                             </ul>
 
@@ -452,7 +452,7 @@
                             </h5>
                             <ul>
                                 My other platform where i my coding skills </ul>
-                            <ul style="color:#33FFFF ; ">Codeforces Profile:-
+                            <ul style="color:#7DF9FF ; ">Codeforces Profile:-
                                 <a style="color: #fff; " target="_blank" href="https://codeforces.com/profile/Shikh007ar">Shikhar's Profile</a>
                             </ul>
 
@@ -512,7 +512,7 @@
                     <div class="col-md-12 home-about-social">
                         <h1 id="ContactMee">FIND ME ON</h1>
                         <p>
-                            Feel free to <span style="color:  #33FFFF;">Connect </span>with me
+                            Feel free to <span style="color:  #7DF9FF;">Connect </span>with me
                         </p>
                         <ul class="home-about-social-links">
                             <li class="social-icons">
@@ -583,7 +583,7 @@
             // INJECT CSS
             var css = document.createElement("style ");
             css.type = "text/css ";
-            css.innerHTML = ".txt-rotate> .wrap { border-right: 10px solid #33FFFF }";
+            css.innerHTML = ".txt-rotate> .wrap { border-right: 10px solid #7DF9FF }";
             document.body.appendChild(css);
         };
         var TxtRotate = function (el, toRotate, period) {
