--- a/index.html
+++ b/index.html
@@ -36,9 +36,23 @@
     <header class="nav-area">
         <nav id="header" class="navbar navbar-expand-lg navbar-dark vannsh">
             <div class=" navbar-brand">
-                <a class="VNN" href="#">
+                <!-- <a class="VNN" href="#">
                     <h1 class="VN">SC</h1>
-                </a>
+                </a> -->
+                <div class="logo-container-main">
+                    <div class="logo-container">
+                        <div class="outer-diamond"></div>
+                        <div class="inner-diamond"></div>
+                        <div class="center-square">
+                            <span class="logo-text">SC</span>
+                        </div>
+                        <div class="diagonal-line top-left"></div>
+                        <div class="diagonal-line top-right"></div>
+                        <div class="diagonal-line bottom-left"></div>
+                        <div class="diagonal-line bottom-right"></div>
+                    </div>
+                </div>
+
 
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"><span
@@ -114,7 +128,7 @@
                     <p style=" color:#7DF9FF; font-size: 17px;"> <span class="txt-rotate" data-period="100"
                             data-rotate='[ "Namaste,",  "Hey,", "Hello," ]'></span> my name is</p>
                 </div>
-               
+
                 <div>
                     <h1 class="Line1"> Shikhar Chauhan. </h1>
                     <h1 class="Line2">I build things for the web. </h1>
