--- a/index.html
+++ b/index.html
@@ -35,25 +35,23 @@
 
     <header class="nav-area">
         <nav id="header" class="navbar navbar-expand-lg navbar-dark vannsh">
-            <div class=" navbar-brand">
-                <!-- <a class="VNN" href="#">
-                    <h1 class="VN">SC</h1>
-                </a> -->
-                <div class="logo-container-main">
-                    <div class="logo-container">
-                        <div class="outer-diamond"></div>
-                        <div class="center-square">
-                            <span class="logo-text">SC</span>
+            <a class="VNN" href="#">
+                <div class=" navbar-brand">
+                    <div class="logo-container-main">
+                        <div class="logo-container">
+                            <div class="outer-diamond"></div>
+                            <div class="center-square">
+                                <span class="logo-text">SC</span>
+                            </div>
+                            <div class="diagonal-line top-left"></div>
+                            <div class="diagonal-line top-right"></div>
+                            <div class="diagonal-line bottom-left"></div>
+                            <div class="diagonal-line bottom-right"></div>
                         </div>
-                        <div class="diagonal-line top-left"></div>
-                        <div class="diagonal-line top-right"></div>
-                        <div class="diagonal-line bottom-left"></div>
-                        <div class="diagonal-line bottom-right"></div>
                     </div>
                 </div>
+            </a>
 
-
-            </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"><span
                     class=" navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
