--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                 <div class=" column ">
                     <div class=" card project-card-view " style=" width: 18rem; text-align: center; ">
-                        <img class=" card-img-top " variant=" top " src=" images/burrr.png" />
+                        <img class=" card-img-top " variant=" top " src=" images/burger.png" />
                                 <div class="card-body ">
                                     <h1 class="card-title ">Burger Builder</h1>
                                     <p style="text-align:justify;font-weight: bold;">
