--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Portfolio</title>
+    <title>SHIKHAR</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link rel="icon" type="image/png" href="/images/websitelogo.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,500&family=Inter:wght@700&family=Lora:ital,wght@1,500&family=Arimo:ital@0;1&family=Quicksand:wght@300;400;500&family=Indie+Flower&family=Nanum+Gothic&family=Open+Sans+Condensed:wght@300&family=Open+Sans+Condensed:wght@300&family=Raleway:wght@300&family=Nunito+Sans:wght@600&family=Fredoka+One&family=Poppins:wght@500&family=Lato:ital@1&family=Permanent+Marker&family=Kufam:ital,wght@1,500&family=Grandstander:ital@1&family=Hachi+Maru+Pop&family=Pacifico&family=Rubik:wght@500&display=swap"
         rel="stylesheet">
