--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                             <ul style="color:#5eead4 ; ">Certificate:-
                                 <a style="color: #fff; "
                                     href="https://www.udemy.com/certificate/UC-a9c58684-ee3b-472c-a9b5-ed11423031fc/">Web
-                                    Development</a>
+                                    Development</a><i class="fa-solid fa-link"></i>
                             </ul>
                         </div>
                         <div class="resume-item ">
@@ -439,8 +439,8 @@
                                 HTML and TypeScript. </ul>
                             <ul style="color:#5eead4 ; ">Certificate:-
                                 <a style="color: #fff; "
-                                    href="https://www.udemy.com/certificate/UC-a8e8af30-adae-4852-8cd9-32748fa92717/">Angular
-                                    Certificate</a>
+                                    href="https://www.udemy.com/certificate/UC-a8e8af30-adae-4852-8cd9-32748fa92717/">React
+                                    Certificate</a><i class="fa-solid fa-link"></i>
                             </ul>
                         </div>
                         <!-- <h3 class="resume-title main-heading ">Check My Coding Skills</h3>
