--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                             <ul style="color:#5eead4 ; ">Certificate:-
                                 <a style="color: #fff; "
                                     href="https://www.udemy.com/certificate/UC-a9c58684-ee3b-472c-a9b5-ed11423031fc/">Web
-                                    Development</a><i class="fa-solid fa-link"></i>
+                                    Development <i style="margin-left: 8px;" class="fa-solid fa-link"></i></a>
                             </ul>
                         </div>
                         <div class="resume-item ">
@@ -440,7 +440,7 @@
                             <ul style="color:#5eead4 ; ">Certificate:-
                                 <a style="color: #fff; "
                                     href="https://www.udemy.com/certificate/UC-a8e8af30-adae-4852-8cd9-32748fa92717/">React
-                                    Certificate</a><i class="fa-solid fa-link"></i>
+                                    Certificate <i style="margin-left: 8px;" class="fa-solid fa-link"></i></a>
                             </ul>
                         </div>
                         <!-- <h3 class="resume-title main-heading ">Check My Coding Skills</h3>
