--- a/index.html
+++ b/index.html
@@ -208,34 +208,48 @@
                     <p>Here are a few projects I've worked on recently.</p>
                 </div>
             </div>
+            <div>
+                <i class="fa-solid fa-briefcase"></i>
+            </div>
 
-            <div class="experience-card">
-                <div class="experience-card-header">
-                    <div class="company-info">
-                        <h2 class="company-name">tiketdotcom</h2>
-                        <p class="duration">2022-PRESENT | 1+ YEAR</p>
+            <div style="width: 85%;">
+                <div class="container">
+                    <div class="vertical-line"></div>
+                    <div class="briefcase-icon">
+                        <i class="fa-solid fa-briefcase"></i>
                     </div>
                 </div>
-                <div class="tech-stack">
-                    <span class="tech">NEXT.JS</span>
-                    <span class="tech">REACT.JS</span>
-                    <span class="tech">JAVASCRIPT</span>
-                    <span class="tech">TYPESCRIPT</span>
-                    <span class="tech">SCSS</span>
-                    <span class="tech">CSS</span>
-                    <span class="tech">HTML</span>
-                    <span class="tech">GIT</span>
-                    <span class="tech">GITHUB</span>
+
+                <div class="experience-card">
+                    <div class="experience-card-header">
+                        <div class="company-info">
+                            <h2 class="company-name">tiketdotcom</h2>
+                            <p class="duration">2022-PRESENT | 1+ YEAR</p>
+                        </div>
+                    </div>
+                    <div class="tech-stack">
+                        <span class="tech">NEXT.JS</span>
+                        <span class="tech">REACT.JS</span>
+                        <span class="tech">JAVASCRIPT</span>
+                        <span class="tech">TYPESCRIPT</span>
+                        <span class="tech">SCSS</span>
+                        <span class="tech">CSS</span>
+                        <span class="tech">HTML</span>
+                        <span class="tech">GIT</span>
+                        <span class="tech">GITHUB</span>
+                    </div>
+                    <p class="description">
+                        Worked on end-to-end development of Next.js projects, emphasizing
+                        scalable, and modular components for versatile functionality. Helped in
+                        establishing a cohesive atomic component library in a mono-repo,
+                        fostering cross-vertical reusability. Used Storybook to document our
+                        components and implemented optimizations to improve loading times,
+                        enhancing user experience and SEO rankings.
+                    </p>
                 </div>
-                <p class="description">
-                    Worked on end-to-end development of Next.js projects, emphasizing
-                    scalable, and modular components for versatile functionality. Helped in
-                    establishing a cohesive atomic component library in a mono-repo,
-                    fostering cross-vertical reusability. Used Storybook to document our
-                    components and implemented optimizations to improve loading times,
-                    enhancing user experience and SEO rankings.
-                </p>
             </div>
+
+
 
             <div class="row" style="text-align: center; width: 85%; margin: 0 auto;">
 
