--- a/index.html
+++ b/index.html
@@ -208,10 +208,9 @@
                     <p>Here are a few projects I've worked on recently.</p>
                 </div>
             </div>
-           
 
             <div style="width: 85%;">
-                <div class="container">
+                <div>
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
                         <i class="fa-solid fa-briefcase"></i>
