--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
             </div>
 
-            <div style="width: 85%;">
+            <div class="experience-container">
                 <div>
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
