--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </div>
 
             <div class="experience-container">
-                <div style="width: 20%;">
+                <div>
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
                         <i class="fa-solid fa-briefcase"></i>
