--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div>
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
-                        <i class="fa-solid fa-briefcase"></i>
+                        <i class="fa-solid fa-briefcase fa-5x"></i>
                     </div>
                 </div>
 
