--- a/index.html
+++ b/index.html
@@ -208,12 +208,13 @@
                     <p>Here are a few projects I've worked on recently.</p>
                 </div>
             </div>
-
+         
+         
             <div class="experience-container">
-                <div>
+                <div class="breifcase-icon">
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
-                        <i class="fa-solid fa-briefcase fa-5x"></i>
+                        <i class="fa-solid fa-briefcase fa-3x"></i>
                     </div>
                 </div>
 
