--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="breifcase-icon">
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
-                        <i class="fa-solid fa-briefcase fa-3x"></i>
+                        <i class="fa-solid fa-briefcase"></i>
                     </div>
                 </div>
 
