--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
                     <p>Here are a few projects I've worked on recently.</p>
                 </div>
             </div>
-         
-         
+
+
             <div class="experience-container">
-                <div class="breifcase-icon">
+                <div class="breifcase-icon-container">
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
                         <i class="fa-solid fa-briefcase fa-2x"></i>
