--- a/index.html
+++ b/index.html
@@ -221,10 +221,8 @@
                 <div class="experience-card">
                     <div class="experience-card-header">
                         <div class="company-info">
-                            <div>
-                                <h2 class="company-name">tiketdotcom</h2>
-                                <a><i class="fa-solid fa-up-right-from-square"></i></a>
-                            </div>
+                            <h2 class="company-name">tiketdotcom <a><i class="fa-solid fa-up-right-from-square"></i></a>
+                            </h2>
                             <p class="duration">2022-PRESENT | 1+ YEAR</p>
                         </div>
                     </div>
