--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <div style="margin-bottom: 200px" class="container ">
             <div style=" width: 85%;margin:0 auto;">
-                <h2 style="font-size: 30px; font-weight: bold;" id="Aboutt"> <span
+                <h2 style="font-size: 30px; font-weight: bold; color: white;" id="Aboutt"> <span
                         style="font-size: 30px; color: #5eead4;">01. </span> About Me</h2>
                 <p class="aboutFront" style=" color: rgba(240, 248, 255, 0.623); font-size: 18px; font-weight: 300;">
                     Passionate Frontend Engineer with 3+ years of
@@ -221,9 +221,10 @@
                 <div class="experience-card">
                     <div class="experience-card-header">
                         <div class="company-info">
-                            <h2 class="company-name">tiketdotcom <a><i class="fa-solid fa-up-right-from-square"></i></a>
+                            <h2 class="company-name">tiketdotcom <a class="company-link"
+                                    href="https://www.tiket.com/"><i class="fa-solid fa-up-right-from-square"></i></a>
                             </h2>
-                            <p class="duration">2022-PRESENT | 1+ YEAR</p>
+                            <p class="duration">2022-PRESENT | 3+ YEARS</p>
                         </div>
                     </div>
                     <div class="tech-stack">
