icon link company

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
                     <div class="experience-card-header">
                         <div class="company-info">
                             <h2 class="company-name">tiketdotcom <a class="company-link"
-                                    href="https://www.tiket.com/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    href="https://www.tiket.com/"><i
+                                        class="fa-solid fa-up-right-from-square company-icon-link"></i></a>
                             </h2>
                             <p class="duration">2022-PRESENT | 3+ YEARS</p>
                         </div>
