--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                 <div class="experience-card">
                     <div class="experience-card-header">
                         <div class="company-info">
-                            <h2 class="company-name">tiketdotcom <a class="company-link"
-                                    href="https://www.tiket.com/"><i
+                            <h2 class="company-name">tiketdotcom <a class="company-link" href="https://www.tiket.com/"
+                                    target="_blank"><i
                                         class="fa-solid fa-up-right-from-square company-icon-link"></i></a>
                             </h2>
                             <p class="duration">2022-PRESENT | 3+ YEARS</p>
@@ -245,7 +245,11 @@
                         establishing a cohesive atomic component library in a mono-repo,
                         fostering cross-vertical reusability. Used Storybook to document our
                         components and implemented optimizations to improve loading times,
-                        enhancing user experience and SEO rankings.
+                        enhancing user experience and SEO rankings.<br />
+                        Contributed to major revamps and new product launches, optimizing performance, improving user
+                        experience, and implementing microservices-based architectures.<br />
+                        Work closely with cross-functional teams, including developers, designers, and product managers,
+                        to implement and advocate for best practices in web accessibility.
                     </p>
                 </div>
             </div>
