icon description point color

--- a/index.html
+++ b/index.html
@@ -240,17 +240,20 @@
                         <span class="tech">GITHUB</span>
                     </div>
                     <p class="description">
-                        <i class="fa-brands fa-creative-commons-nd"></i>Worked on end-to-end development of Next.js
+                        <i class="fa-brands fa-creative-commons-nd description-point"></i>Worked on end-to-end
+                        development of Next.js
                         projects, emphasizing
                         scalable, and modular components for versatile functionality. Helped in
                         establishing a cohesive atomic component library in a mono-repo,
                         fostering cross-vertical reusability. Used Storybook to document our
                         components and implemented optimizations to improve loading times,
                         enhancing user experience and SEO rankings.<br />
-                        <i class="fa-regular fa-circle-user"></i> Contributed to major revamps and new product launches,
+                        <i class="fa-regular fa-circle-user description-point"></i> Contributed to major revamps and new
+                        product launches,
                         optimizing performance, improving user
                         experience, and implementing microservices-based architectures.<br />
-                        <i class="fa-solid fa-users-viewfinder"></i> Work closely with cross-functional teams, including
+                        <i class="fa-solid fa-people-group description-point"></i>Work closely with cross-functional
+                        teams, including
                         developers, designers, and product managers,
                         to implement and advocate for best practices in web accessibility.
                     </p>
