--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
                 <div class="experience-card">
                     <div class="experience-card-header">
                         <div class="company-info">
-                            <h2 class="company-name">tiketdotcom <a class="company-link" href="https://www.tiket.com/"
+                            <h2 class="company-name">tiketdotcom <a class="company-link"
+                                    href="https://www.linkedin.com/company/pt-global-tiket-network/posts/?feedView=all"
                                     target="_blank"><i
                                         class="fa-solid fa-up-right-from-square company-icon-link"></i></a>
                             </h2>
-                            <p class="duration">2022-PRESENT | 3+ YEARS</p>
+                            <p class="duration">APR 2022-PRESENT | 3+ YEARS</p>
                         </div>
                     </div>
                     <div class="tech-stack">
@@ -256,11 +257,46 @@
                 </div>
             </div>
 
+            <div class="experience-container">
+                <div class="breifcase-icon-container">
+                    <div class="vertical-line"></div>
+                    <div class="briefcase-icon">
+                        <i class="fa-solid fa-briefcase fa-2x"></i>
+                    </div>
+                </div>
 
+                <div class="experience-card">
+                    <div class="experience-card-header">
+                        <div class="company-info">
+                            <h2 class="company-name">Metron Security<a class="company-link"
+                                    href="https://www.linkedin.com/company/metron-labs/posts/?feedView=all"
+                                    target="_blank"><i
+                                        class="fa-solid fa-up-right-from-square company-icon-link"></i></a>
+                            </h2>
+                            <p class="duration">FEB 2022-MAR 2022</p>
+                        </div>
+                    </div>
+                    <div class="tech-stack">
+                        <span class="tech">SPLUNK</span>
+                        <span class="tech">QRADAR</span>
+                        <span class="tech">XSOAR</span>
+                        <span class="tech">NODE.JS</span>
+                        <span class="tech">RESTful APIs</span>
+                    </div>
+                    <p class="description">
+                        <i class="fa-brands fa-creative-commons-nd description-point"></i>Worked with multiple teams to
+                        deliver internal application for the organisation which is used by thousands on daily basics,
+                        technical contributions to the project include the development of multiple frontend components
+                        using react as well as development of api using REST Apis.<br />
+                        <i class="fa-solid fa-people-group description-point"></i>I integrated CI/CD tools to monitor
+                        builds, deployments, and test results while ensuring smooth application performance by tracking
+                        key metrics. Additionally, I worked closely with developers to diagnose bottlenecks and optimize
+                        performance, enhancing efficiency and reliability.
+                    </p>
+                </div>
+            </div>
 
             <div class="row" style="text-align: center; width: 85%; margin: 0 auto;">
-
-
 
                 <div class="column">
                     <div class="card project-card-view" style="width: 18rem; ">
