--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </div>
             </div>
 
-            <div class="experience-container">
+            <div class="experience-container" style="margin-top: 60px;">
                 <div class="breifcase-icon-container">
                     <div class="vertical-line"></div>
                     <div class="briefcase-icon">
