--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     </p>
                 </div>
             </div>
-
+            <!-- 
             <div class="row" style="text-align: center; width: 85%; margin: 0 auto;">
 
                 <div class="column">
@@ -339,7 +339,7 @@
                 </div>
 
 
-            </div>
+            </div> -->
 
             <div style="margin-top: 100px;">
 
