--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="bootstrap-social.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="/photo.js" type="text/javascript"></script> -->
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -68,8 +68,8 @@
                                 class="color">04.</span> Contact Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id='Stop' href="./ShikharFrontendResume.html"><button
-                                class="Tbutton btn-l-r btn-color" type="button" name="button">Resume</button></a>
+                        <a class="nav-link" id='Stop' href="./MyResume.html"><button class="Tbutton btn-l-r btn-color"
+                                type="button" name="button">Resume</button></a>
                     </li>
                 </ul>
             </div>
