new window for resume

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                                 class="color">04.</span> Contact Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id='Stop' href="./MyResume.html"><button class="Tbutton btn-l-r btn-color"
-                                type="button" name="button">Resume</button></a>
+                        <a class="nav-link" id='Stop' href="./MyResume.html" target="_blank"><button
+                                class="Tbutton btn-l-r btn-color" type="button" name="button">Resume</button></a>
                     </li>
                 </ul>
             </div>
