--- a/index.html
+++ b/index.html
@@ -736,6 +736,23 @@
             torch.style.left = e.clientX + "px";
             torch.style.top = e.clientY + "px";
         });
+
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const navLinks = document.querySelectorAll(".navbar-nav .nav-link");
+            const navbarCollapse = document.querySelector(".navbar-collapse");
+
+            navLinks.forEach(function (link) {
+                link.addEventListener("click", function () {
+                    if (navbarCollapse.classList.contains("show")) {
+                        new bootstrap.Collapse(navbarCollapse, {
+                            toggle: true
+                        });
+                    }
+                });
+            });
+        });
+
     </script>
 
 </body>
