--- a/index.html
+++ b/index.html
@@ -737,7 +737,6 @@
             torch.style.top = e.clientY + "px";
         });
 
-
         document.addEventListener("DOMContentLoaded", function () {
             const navLinks = document.querySelectorAll(".navbar-nav .nav-link");
             const navbarCollapse = document.querySelector(".navbar-collapse");
@@ -745,11 +744,15 @@
             navLinks.forEach(function (link) {
                 link.addEventListener("click", function () {
                     if (navbarCollapse.classList.contains("show")) {
-                        new bootstrap.Collapse(navbarCollapse, {
-                            toggle: true
-                        });
+                        new bootstrap.Collapse(navbarCollapse, { toggle: true });
                     }
                 });
+            });
+
+            window.addEventListener("scroll", function () {
+                if (navbarCollapse.classList.contains("show")) {
+                    new bootstrap.Collapse(navbarCollapse, { toggle: true });
+                }
             });
         });
 
