navbar options change

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
                         <a href="#Aboutt" class="nav-link" id="Stop" href="/"> <span class="color">01.</span> About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Workss" class="nav-link" id="Stop" href="/Experience"> <span class="color">02.</span>
-                            Work</a>
+                        <a href="#Workss" class="nav-link" id="Stop" href="/Work"> <span class="color">02.</span>
+                            Education & Work</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Experiencee" class="nav-link" id="Stop" href="/Work"> <span class="color">03.</span>
+                        <a href="#Experiencee" class="nav-link" id="Stop" href="/Experience"> <span
+                                class="color">03.</span>
                             Experience</a>
                     </li>
                     <li class="nav-item">
@@ -197,10 +198,9 @@
 
 
         <div class="container">
-
             <div style="margin-bottom: 40px;">
                 <div style="width: 85%; margin: 0 auto;">
-                    <h1 id="Workss" class="main-heading">My Recent <span style="color: #5eead4">Works</span> </h1>
+                    <h1 id="Experiencee" class="main-heading">My Recent <span style="color: #5eead4">Works</span> </h1>
                     <p>Here are a few projects I've worked on recently.</p>
                 </div>
             </div>
@@ -492,7 +492,7 @@
 
                 <div class="resume row ">
                     <div class="col-md-6 resume-left " style="float: left; ">
-                        <h3 id="Experiencee" class="resume-title main-heading ">Certifications</h3>
+                        <h3 id="Workss" class="resume-title main-heading ">Certifications</h3>
 
 
                         <div class="resume-item ">
