--- a/index.html
+++ b/index.html
@@ -503,9 +503,10 @@
                                 <em>April 2020 - July 2020</em>
                             </p>
                             <ul>
-                                Through this platform I learnt various new languages like
-                                html,css,javascript,nodejs,express,ejs by working on different technologies like
-                                mongodb,Visual studio,Atom and roto3T </ul>
+                                <li>Through this platform I learnt various new languages like
+                                    html,css,javascript,nodejs,express,ejs by working on different technologies like
+                                    mongodb,Visual studio,Atom and roto3T</li>
+                            </ul>
                             <ul style="color:#5eead4 ; ">Certificate:-
                                 <a style="color: #fff; "
                                     href="https://www.udemy.com/certificate/UC-a9c58684-ee3b-472c-a9b5-ed11423031fc/">Web
