--- a/index.html
+++ b/index.html
@@ -503,8 +503,9 @@
                                 <em>April 2020 - July 2020</em>
                             </p>
                             <ul>
-                                <li>Through this platform I learnt various new languages like
-                                    html,css,javascript,nodejs,express,ejs by working on different technologies like
+                                <li class="certificate-desc">Through this platform I learnt various new languages like
+                                    html, css, javascript, nodejs, express, ejs by working on different technologies
+                                    like
                                     mongodb,Visual studio,Atom and roto3T</li>
                             </ul>
                             <ul style="color:#5eead4 ; ">Certificate:-
@@ -521,8 +522,10 @@
                                 <em>April 2020 - July 2020</em>
                             </p>
                             <ul>
-                                React is a platform and framework for building single-page client applications using
-                                HTML and TypeScript. </ul>
+                                <li class="certificate-desc">React is a platform and framework for building single-page
+                                    client applications using
+                                    HTML and TypeScript. </li>
+                            </ul>
                             <ul style="color:#5eead4 ; ">Certificate:-
                                 <a style="color: #fff; "
                                     href="https://www.udemy.com/certificate/UC-a8e8af30-adae-4852-8cd9-32748fa92717/">React
@@ -563,16 +566,16 @@
                                 B.Tech in Computer Science
                             </h5>
                             <p>
-                                <em>2018 - Present</em>
+                                <em>2018 - 2022</em>
                             </p>
                             <ul>
-                                Currently in 3rd year(6th Semester)</ul>
+                                B.Tech Graduate (Class of 2022)</ul>
                             <ul> <span style="color: #fff;">CGPA:-</span> 7.2</ul>
 
                         </div>
                         <div class="resume-item ">
                             <h5 class="resume-title ">
-                                12TH BOARD (ASISSI Convent School,Etah)
+                                12TH BOARD (Assisi Convent School,Etah)
                             </h5>
                             <p>
                                 <em>2015 - 2017</em>
@@ -583,10 +586,10 @@
                         </div>
                         <div class="resume-item ">
                             <h5 class="resume-title ">
-                                10TH BOARD (ASSISSI Convent School,Etah)
+                                10TH BOARD (Assisi Convent School,Etah)
                             </h5>
                             <p>
-                                <em>2008 - 2015</em>
+                                <em>2013 - 2015</em>
                             </p>
                             <ul>
                                 <span style="color: #fff;">CGPA:-</span> 7.2
